[package]
name = "ppm"
version = "0.1.0"
authors = ["Pierre Kettmus <pkettmus@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[lib]
name = "ppm"
crate-type = ["dylib"]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]

